# livesplit-core

./: .gitignore  .gitmodules  Cargo.toml
.github/workflows/: rust.yml
crates/aslib/: Cargo.toml
crates/aslib/src/: asl.rs  lib.rs
crates/livesplit-auto-splitting/: Cargo.toml
crates/livesplit-auto-splitting/src/: environment.rs  lib.rs  runtime.rs  timer.rs
crates/livesplit-auto-splitting/src/process/: windows.rs
crates/livesplit-auto-splitting/tests/: sandboxing.rs
crates/livesplit-auto-splitting/tests/test-cases/stdout/: Cargo.toml
crates/livesplit-auto-splitting/tests/test-cases/stdout/src/: lib.rs
crates/livesplit-hotkey/src/: lib.rs
crates/livesplit-hotkey/src/windows/: mod.rs
crates/mockls/: Cargo.toml
crates/mockls/src/: main.rs
src/auto_splitting/: mod.rs
