[package]
name = "livesplit-auto-splitting"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
log = "0.4.8"
slotmap = "1.0.2"
sysinfo = "0.20.5"
read-process-memory = "0.1.3"
wasmtime = { version = "0.28.0", default-features = false }
