[package]
name = "livesplit-auto-splitting"
version = "0.1.0"
authors = ["Christopher Serr <christopher.serr@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.45"
log = "0.4.14"
slotmap = "1.0.6"
sysinfo = "0.21.1"
read-process-memory = "0.1.3"
wasmtime = { version = "0.31.0", default-features = false, features = [
    "cranelift",
] }
time = { version = "0.3.4", default-features = false }
